--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/schunk_svh_library
-	previous = 
-	base = 0bb2ec0
+	previous = 0bb2ec0
+	base = caf2cac
 	trim = 
 	trimbase = 
