--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/schunk_svh_library
-	previous = 
-	base = add3669
+	previous = add3669
+	base = 1c1dda4
 	trim = 
 	trimbase = 
