--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/schunk_svh_library
-	previous = 
-	base = b4a3e45
+	previous = b4a3e45
+	base = d9ad607
 	trim = 
 	trimbase = 
