--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/schunk_svh_library
-	previous = 
-	base = 9ce7879
+	previous = 9ce7879
+	base = 796610c
 	trim = 
 	trimbase = 
