--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/schunk_svh_library
-	previous = 
-	base = eb88f49
+	previous = eb88f49
+	base = fc3ad21
 	trim = 
 	trimbase = 
