--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/schunk_svh_library
-	previous = 
-	base = 3dd9259
+	previous = 3dd9259
+	base = abff1c7
 	trim = 
 	trimbase = 
