--- a/tracks.yaml
+++ b/tracks.yaml
@@ -33,19 +33,13 @@ tracks:
       --replace
     - git-bloom-generate -y rosrelease :{ros_distro} --source upstream -i :{release_inc}
     - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
-      -i :{release_inc} --os-name ubuntu
-    - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
       -i :{release_inc} --os-name debian --os-not-required
-    - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
-      :{release_inc} --os-name fedora
-    - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
-      :{release_inc} --os-name rhel
     devel_branch: main
     last_version: 1.0.1
     name: schunk_svh_library
-    patches: null
+    patches: humble-patches
     release_inc: '1'
-    release_repo_url: null
+    release_repo_url: git@github.com:revyos-ros/schunk_svh_library-release.git
     release_tag: :{version}
     ros_distro: humble
     vcs_type: git
